Fixed: - Section titles display on mobile devices; - burger menu icon change to use react icons. Removed: - tableware icons from mobile devices from section titles.

--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,8 @@ body {
 }
 
 #root {
+  max-width: 100vw;
+
   display: grid;
   width: 100%;
   grid-template-columns: repeat(12, 1fr);
