--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -28,8 +28,8 @@
 .burger {
   display: block;
   position: absolute;
-  top: 2rem;
-  right: 2rem;
+  top: 2.1rem;
+  right: 1rem;
   cursor: pointer;
   width: 2rem;
   height: 2rem;
