--- a/src/components/SpecialsSection/SpecialsItem/SpecialsItem.module.css
+++ b/src/components/SpecialsSection/SpecialsItem/SpecialsItem.module.css
@@ -32,7 +32,7 @@
   width: 50%;
   @media screen and (max-width: 768px) {
     width: 100%;
-    padding-inline: 2rem;
+    text-align: center;
   }
 }
 
